--- a/beta-developer-pass.html
+++ b/beta-developer-pass.html
@@ -5,7 +5,7 @@
         <link rel="icon" 
         type="image/png" 
         href="iconweb.png">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
         
         <script language="JavaScript">
 
