--- a/test-verify-page.html
+++ b/test-verify-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Verify@ACO | TEST</title>
+        <title>Beta Dev Verification | ACO</title>
         <link rel="icon" 
         type="image/png" 
         href="iconweb.png">
