--- a/beta-developer-pass.html
+++ b/beta-developer-pass.html
@@ -85,7 +85,8 @@ This user has completed the user verification and I am not a robot setup. Please
 ✅I am not a robot!
 ✅I am not a hacker!
 ✅I do not have an alt
-✅I am going to use ACO beta without abuse
+✅I am going to use ACO beta without abuse.
+✅Agreed to ToS.
 ✅(ALL FEILDS ARE GREEN)">
     
     code-Aj@ldf@;934Jslw3rJer3K03L:ds03Ljfai3
