--- a/beta-developer-pass.html
+++ b/beta-developer-pass.html
@@ -364,9 +364,11 @@ This user has completed the user verification and I am not a robot setup. Please
 ✅(ALL FEILDS ARE GREEN)
 code-Aj@ldf@;934Jslw3rJer3K03L:ds03Ljfai3
 qr-| |||| ||| |||||| \|| |||||| |||| ||| |||| ||| //|\|>\.||\\|\/\/?|?\\//||\\??\\ACO
--------------------------------------------USER INSTRUCTIONS">
+-------------------------------------------USER INSTRUCTIONS
 
-Just press send to this email!
+Just press send to this email!">
+    
+    
     <div class="container">
      <div class="left-side">
       <div class="card">
