--- a/verify-fail.html
+++ b/verify-fail.html
@@ -353,7 +353,7 @@ var myname=prompt("ACO Verification System™: We were able to verify you are hu
 <!------------>  
 <!----------------------------------VERIFICATION------------------------------------------------------------------------------------>
 
-<a href="mailto:ayaanshaj@gmail.com?subject=Verification FAILED🔴&body=ACO Auto Verification⛔: This user has failed verification... please manualy verify this user-------------_-_-_-_-_-_-_-_-_-- ➡➡⏩⏩⏩USER INSTRUCTION! Please just send this email without changing anything, please remain calm as this does not mean you will not be able to use ACO again (THIS IS JUST EXTRA VERFIFCATION!)!">
+<a href="mailto:aco.development.studio@gmail.com?subject=Verification FAILED🔴&body=ACO Auto Verification⛔: This user has failed verification... please manualy verify this user-------------_-_-_-_-_-_-_-_-_-- ➡➡⏩⏩⏩USER INSTRUCTION! Please just send this email without changing anything, please remain calm as this does not mean you will not be able to use ACO again (THIS IS JUST EXTRA VERFIFCATION!)!">
     <div class="container">
      <div class="left-side">
       <div class="card">
